--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -5,6 +5,7 @@ html, body {
     user-select: none;
     white-space: nowrap;
     color: var(--text-color);
+    scrollbar-color: var(--scrollbar-thumb-color) var(--scrollbar-track-color);
 }
 
 h1, h2, h3 {
